--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
-<h1>Default project home page </h1>
+<h1>Default Project Home Page </h1>
 <p>Congratulations on your new java.net project! </p>
 <p>This page is the home page for your new project. If your project uses CVS, you can edit 
   the information displayed on this page, by checking out your project's 
